Add Google Search Console verification

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="lSCKx2s5IQADpEo_cROvvBrxzeXnk_wSFBPYiravB28" />
   <title>Galbreath Grocery | Goodlettsville's Local Deli & Market</title>
   <meta name="description"
     content="Visit Galbreath Grocery in Goodlettsville, TN for fresh deli sandwiches, hot breakfast biscuits, pizza, and daily specials. A community staple offering quality meats and friendly service." />
